Fix initial anatomical view zoom
The anatomical view was initially zoomed in too much. This commit adjusts the initial zoom level to display the image in the correct size.

--- a/src/styles/responsive/anatomy.css
+++ b/src/styles/responsive/anatomy.css
@@ -20,8 +20,8 @@
 
 .model-image {
   object-fit: contain !important;
-  max-width: 85% !important;
-  max-height: 85% !important;
+  max-width: 80% !important;
+  max-height: 80% !important;
   width: auto !important;
   height: auto !important;
   object-position: center !important;
@@ -52,7 +52,7 @@
   
   .model-image {
     max-height: 380px;
-    max-width: 85%;
+    max-width: 80%;
   }
   
   .text-xs-mobile {
@@ -81,7 +81,7 @@
   
   .model-image {
     max-height: 530px;
-    max-width: 85%;
+    max-width: 80%;
   }
 }
 
@@ -98,6 +98,6 @@
   
   .model-image {
     max-height: 660px;
-    max-width: 85%;
+    max-width: 80%;
   }
 }
